# evolux-challenge

./: .pre-commit-config.yaml  pyproject.toml
app/: __init__.py  settings.py
app/base/: models.py  serializers.py
app/migrations/versions/: 4b2cf1d839c7_.py
app/modules/number/: models.py  serializers.py  views.py
app/modules/user/: models.py  serializers.py  views.py
docs/: Insomnia-All_2023-02-19.json
infra/dev/: Dockerfile  docker-compose.yml
infra/prod/: Dockerfile  docker-compose.yml  gunicorn.conf.py  requirements.txt
tests/: test_flask_base.py  test_number.py  test_user.py
